@@ -4,7 +4,7 @@ LPC Routines for speech processing
 Copyright: David Cournapeau 2006
 License: BSD-style (see LICENSE.txt in main source directory)
 """
-version = '0.1'
+version = '0.2.1'
 
 depends = ['linalg']
 ignore  = False
